--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+Certamente! Ecco un esempio di codice HTML che soddisfa le tue richieste:
+
+```html
 <!DOCTYPE html>
 <html lang="it">
 <head>
@@ -7,32 +10,39 @@
     <!-- Google Fonts per un font elegante -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet" />
     <style>
+        /* Sfondo con sfumatura rosa */
         body {
             margin: 0;
             padding: 20px;
-            /* Sfondo rosa con sfumature */
-            background: linear-gradient(135deg, #ffe6f0, #ffccdd);
+            height: 100vh;
+            background: linear-gradient(to bottom, #ffe6f0, #ffffff);
             font-family: 'Playfair Display', serif;
-            text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
+        /* Titolo centrato */
         h1 {
+            text-align: center;
             font-size: 2em;
-            color: #8B4513; /* marrone */
-            margin-bottom: 20px;
+            color: #4B2E2E; /* marrone bello con il rosa */
+            margin-top: 20px;
+            margin-bottom: 30px;
+            max-width: 90%;
         }
 
-        /* Immagine con bordo nero */
-        .thumbnail {
+        /* Immagine con bordo */
+        .foto {
             display: block;
             max-width: 90%;
             height: auto;
-            margin: 0 auto 20px auto;
             border: 3px solid black;
-            border-radius: 8px; /* leggero arrotondamento per stile */
+            border-radius: 8px;
+            /* Per assicurarsi che sia centrata e responsive */
         }
 
-        /* Responsive adjustments */
+        /* Responsive adjustment per dispositivi più piccoli */
         @media (max-width: 600px) {
             h1 {
                 font-size: 1.5em;
@@ -42,7 +52,19 @@
 </head>
 <body>
     <h1>BATTESIMO DI ILENIA - 27 Settembre 2025</h1>
-    <!-- Sostituisci 'path-to-your-image.jpg' con il percorso o URL della tua foto -->
-    <img src="foto_battesimo.jpg" alt="Foto di Ilenia" class="thumbnail" />
+    <!-- Inserisci qui il percorso della tua foto -->
+    <img src="foto_battesimo.jpg" alt="Foto del battesimo" class="foto" />
 </body>
 </html>
+```
+
+**Cose da fare:**
+- Sostituisci `"percorso-della-tua-foto.jpg"` con il percorso reale della tua immagine (può essere un file locale o un URL).
+- Puoi modificare i colori e le dimensioni secondo i tuoi gusti.
+
+**Nota:**  
+- Ho scelto un font elegante (Playfair Display) che è leggibile e di aspetto raffinato.  
+- La sfumatura di sfondo è molto leggera e piacevole.  
+- La foto sarà centrata, con un bordo nero e dimensioni adattabili al dispositivo.
+
+Se vuoi un ulteriore aiuto o personalizzazioni, chiedi pure!
