--- a/index.html
+++ b/index.html
@@ -1,67 +1,61 @@
-Certamente! Ecco un esempio di codice HTML che soddisfa le tue richieste:
-
-- Sfondo rosa con una sfumatura chiara
-- Titolo centrato in alto, con font elegante, colore marrone
-- Foto centrata sotto il titolo, con bordo nero, di dimensioni adattabili per dispositivi mobili
-
-```html
 <!DOCTYPE html>
 <html lang="it">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Battesimo di Ilenia</title>
-    <!-- Importa un font elegante e leggibile da Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Roboto&display=swap" rel="stylesheet" />
     <style>
         body {
             margin: 0;
-            padding: 0;
-            /* Sfondo con sfumatura rosa chiaro */
-            background: linear-gradient(to bottom, #ffe6f0, #ffe6f0);
-            font-family: 'Roboto', sans-serif;
+            background-color: #ffe6f0; /* rosa chiaro */
+            font-family: 'Georgia', serif; /* font elegante ma leggibile */
             display: flex;
             flex-direction: column;
             align-items: center;
         }
 
-        h1 {
+        /* Contenitore del titolo */
+        .title-container {
+            background-color: rgba(255, 255, 255, 0.6); /* leggero sfondo per leggibilità */
+            padding: 20px;
             margin-top: 20px;
-            text-align: center;
-            font-family: 'Great Vibes', cursive; /* font elegante e leggibile */
-            font-size: 1.8em;
-            color: #8B4513; /* marrone */
-            max-width: 90%;
+            border-radius: 8px;
+            width: fit-content;
         }
 
-        /* Stile per l'immagine */
-        img {
+        /* Titolo */
+        h1 {
+            margin: 0;
+            font-size: 1.8em;
+            color: #5c3a2e; /* marrone */
+            text-align: center;
+        }
+
+        /* Immagine */
+        .baptism-photo {
             display: block;
-            margin-top: 20px;
-            max-width: 90%; /* si adatta allo schermo del telefono */
-            height: auto; /* mantiene le proporzioni */
-            border: 2px solid black; /* bordo nero */
-            border-radius: 8px; /* angoli leggermente arrotondati per un tocco elegante */
+            margin: 30px auto;
+            max-width: 90%;
+            height: auto;
+            border: 2px solid black;
+            border-radius: 4px;
+        }
+
+        /* Per dispositivi mobili, assicurarsi che la foto sia proporzionata */
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 1.4em;
+            }
         }
     </style>
 </head>
 <body>
-    <h1>BATTESIMO DI ILENIA - 27 Settembre 2025</h1>
-    <!-- Sostituisci 'tuafoto.jpg' con il percorso della tua immagine -->
-    <img src="foto_battesimo.jpg" alt="Foto del battesimo di Ilenia" />
+    <!-- Contenitore del titolo -->
+    <div class="title-container">
+        <h1>BATTESIMO DI ILENIA - 27 Settembre 2025</h1>
+    </div>
+
+    <!-- Inserisci qui la tua foto, sostituisci src con il percorso corretto -->
+    <img src="foto_battesimo.jpg" alt="Foto del battesimo" class="baptism-photo" />
 </body>
 </html>
-```
-
-**Come usare questo codice:**
-
-1. Salva il codice in un file con estensione `.html`, ad esempio `index.html`.
-2. Sostituisci `"tuafoto.jpg"` con il percorso reale della tua foto, ad esempio `"immagine_battesimo.jpg"` o inserisci l'URL se la carichi online.
-3. Apri il file in un browser per visualizzare la pagina.
-
-**Note:**
-- Il font "Great Vibes" è elegante ma leggibile, puoi scegliere anche altri font da Google Fonts.
-- La larghezza massima dell'immagine è impostata al 90% per adattarsi bene agli schermi mobili.
-- La sfumatura dello sfondo può essere modificata a piacere cambiando i codici colore.
-
-Se desideri ulteriori personalizzazioni, chiedimi pure!
