--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
 
         /* Contenitore del titolo */
         .title-container {
-            background-color: rgba(255, 255, 255, 0.6); /* leggero sfondo per leggibilità */
-            padding: 20px;
+            background-color: rgba(255, 255, 255, 0.6);
+            padding: 10px 20px; /* padding ridotto per meno spazio */
             margin-top: 20px;
             border-radius: 8px;
-            width: fit-content;
+            border: 2px solid #5c3a2e; /* bordo dello stesso colore del titolo */
+            display: inline-block; /* si adatta al contenuto */
         }
 
         /* Titolo */
