--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
             align-items: center;
         }
 
-        /* Contenitore del titolo */
-        .title-container {
-            background-color: rgba(255, 255, 255, 0.6);
-            padding: 10px 20px; /* padding ridotto per meno spazio */
-            margin-top: 20px;
-            border-radius: 8px;
-            border: 2px solid #5c3a2e; /* bordo dello stesso colore del titolo */
-            display: inline-block; /* si adatta al contenuto */
-        }
+        /* Contenitore del titolo con margine orizzontale */
+		.title-container {
+			background-color: rgba(255, 255, 255, 0.6);
+			padding: 10px 20px;
+			margin: 20px auto; /* centra e lascia spazio ai lati */
+			max-width: 90%; /* si adatta allo schermo */
+			border-radius: 8px;
+			border: 2px solid #5c3a2e;
+		}
 
         /* Titolo */
         h1 {
