--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Battesimo di Ilenia</title>
+	<script>
+	  // Funzione per cambiare l'immagine e il titolo
+	  function cambiaImmagine() {
+		const img = document.getElementById('immagine');
+		const titolo = document.getElementById('titolo');
+		// Sostituisci il src con il percorso della nuova immagine
+		img.src = 'foto_battesimo1.jpg';
+		// Cambia il testo del titolo
+		titolo.textContent = 'BUON PRANZO!';
+	  }
+	</script>
     <style>
         body {
             margin: 0;
@@ -40,7 +51,7 @@
             margin: 30px auto;
             max-width: 90%;
             height: auto;
-            border: 2px solid black;
+            border: 2px solid #5c3a2e;
             border-radius: 4px;
         }
 
@@ -55,10 +66,10 @@
 <body>
     <!-- Contenitore del titolo -->
     <div class="title-container">
-        <h1>BATTESIMO DI ILENIA - 27 Settembre 2025</h1>
+        <h1 id="titolo">BATTESIMO DI ILENIA 27 Settembre 2025</h1>
     </div>
 
     <!-- Inserisci qui la tua foto, sostituisci src con il percorso corretto -->
-    <img src="foto_battesimo.jpg" alt="Foto del battesimo" class="baptism-photo" />
+    <img src="foto_battesimo.jpg" id="immagine" alt="Foto del battesimo" class="baptism-photo" style="cursor:pointer;" onclick="cambiaImmagine()" />
 </body>
 </html>
