--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <body>
     <!-- Contenitore del titolo -->
     <div class="title-container">
-        <h1 id="titolo">BATTESIMO DI ILENIA 27 Settembre 2025</h1>
+        <h1 id="titolo">BATTESIMO DI ILENIA\n27 Settembre 2025</h1>
     </div>
 
     <!-- Inserisci qui la tua foto, sostituisci src con il percorso corretto -->
