--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             text-align: center;
         }
 
-        /* Immagine */
-        .baptism-photo {
+        /* Classe condivisa per immagini responsive */
+        .responsive-image {
             display: block;
             margin: 30px auto;
             max-width: 90%;
@@ -70,6 +70,6 @@
     </div>
 
     <!-- Inserisci qui la tua foto, sostituisci src con il percorso corretto -->
-    <img src="foto_battesimo.jpg" id="immagine" alt="Foto del battesimo" class="baptism-photo" style="cursor:pointer;" onclick="cambiaImmagine()" />
+    <img src="foto_battesimo.jpg" id="immagine" alt="Foto del battesimo" class="baptism-photo responsive-image" style="cursor:pointer;" onclick="cambiaImmagine()" />
 </body>
 </html>
