--- a/index.html
+++ b/index.html
@@ -45,14 +45,17 @@
             text-align: center;
         }
 
-        /* Classe condivisa per immagini responsive */
-        .responsive-image {
+        /* Immagine */
+        .baptism-photo {
             display: block;
             margin: 30px auto;
             max-width: 90%;
             height: auto;
             border: 2px solid #5c3a2e;
             border-radius: 4px;
+            /* Aggiunto per evitare overflow e scrolling */
+            max-height: 80vh; /* Limita l'altezza dell'immagine alla altezza viewport */
+            object-fit: contain; /* Assicura che l'immagine mantenga le proporzioni */
         }
 
         /* Per dispositivi mobili, assicurarsi che la foto sia proporzionata */
@@ -70,6 +73,6 @@
     </div>
 
     <!-- Inserisci qui la tua foto, sostituisci src con il percorso corretto -->
-    <img src="foto_battesimo.jpg" id="immagine" alt="Foto del battesimo" class="baptism-photo responsive-image" style="cursor:pointer;" onclick="cambiaImmagine()" />
+    <img src="foto_battesimo.jpg" id="immagine" alt="Foto del battesimo" class="baptism-photo" style="cursor:pointer;" onclick="cambiaImmagine()" />
 </body>
 </html>
