--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            position: relative; /* per posizionare le nuvolette assolutamente */
-            min-height: 100vh;
-            overflow: hidden; /* per evitare scroll indesiderati */
         }
 
         /* Contenitore del titolo */
@@ -38,7 +35,6 @@
             border-radius: 8px;
 			border: 2px solid #5c3a2e;
             width: fit-content;
-            z-index: 2; /* sopra le nuvolette */
         }
 
         /* Titolo */
@@ -59,110 +55,22 @@
             border: 2px solid #5c3a2e;
             border-radius: 4px;
             object-fit: contain; /* Mantieni proporzioni */
-            cursor: pointer;
-            z-index: 2; /* sopra le nuvolette */
-            position: relative;
         }
 
-        /* Nuvole */
-        .nuvola {
-            position: absolute;
-            background: #fff;
-            border-radius: 50%;
-            box-shadow: inset -10px 0 20px rgba(255,255,255,0.8),
-                        inset 10px 0 20px rgba(255,255,255,0.8);
-            opacity: 0.8;
-            /* Dimensioni casuali tra 50px e 150px */
-            width: var(--nuvola-size);
-            height: var(--nuvola-size);
-        }
-
-        /* Nuvole multiple, alcune formate da più cerchi per effetto più realistico */
-        .nuvola::before,
-        .nuvola::after {
-            content: "";
-            position: absolute;
-            background: #fff;
-            border-radius: 50%;
-        }
-
-        /* Posizioni e dimensioni variabili per le nuvole */
-        /* Puoi aggiungere più varianti se vuoi più diversità */
-
-        /* Per esempio, la prima nuvola */
-        .nuvola:nth-child(1) {
-            --nuvola-size: 80px;
-            top: 50px;
-            left: 10%;
-        }
-
-        /* Seconda nuvola */
-        .nuvola:nth-child(2) {
-            --nuvola-size: 100px;
-            top: 100px;
-            right: 15%;
-        }
-
-        /* Terza nuvola */
-        .nuvola:nth-child(3) {
-            --nuvola-size: 60px;
-            top: 200px;
-            left: 25%;
-        }
-
-        /* Quarta nuvola */
-        .nuvola:nth-child(4) {
-            --nuvola-size: 120px;
-            top: 70px;
-            right: 40%;
-        }
-
-        /* Quinta nuvola */
-        .nuvola:nth-child(5) {
-            --nuvola-size: 90px;
-            top: 180px;
-            left: 70%;
-        }
-
-        /* Sesta nuvola */
-        .nuvola:nth-child(6) {
-            --nuvola-size: 70px;
-            top: 250px;
-            right: 20%;
-        }
-
-        /* Settima nuvola (opzionale) */
-        /* .nuvola:nth-child(7) {
-            --nuvola-size: 100px;
-            top: 300px;
-            left: 50%;
-        } */
-
-        /* Per rendere le nuvole più realistiche, puoi usare anche più cerchi annidati, ma per semplicità utilizziamo cerchi singoli */
-
-        /* Per dispositivi mobili, ridimensiona le nuvole se necessario */
+        /* Per dispositivi mobili, assicurarsi che la foto sia proporzionata */
         @media (max-width: 600px) {
             h1 {
                 font-size: 1.4em;
             }
+            /* Puoi anche ridurre ulteriormente la dimensione dell'immagine se necessario */
             .baptism-photo {
                 max-width: 90%;
                 max-height: 60vh;
             }
-            /* Puoi anche ridurre le dimensioni delle nuvole in modo simile */
         }
     </style>
 </head>
 <body>
-    <!-- Nuvole di background -->
-    <div class="nuvola"></div>
-    <div class="nuvola"></div>
-    <div class="nuvola"></div>
-    <div class="nuvola"></div>
-    <div class="nuvola"></div>
-    <div class="nuvola"></div>
-    <!-- Puoi aggiungere altre nuvole se vuoi più varietà -->
-
     <!-- Contenitore del titolo -->
     <div class="title-container">
         <h1 id="titolo">BATTESIMO DI ILENIA<br>27 Settembre 2025</h1>
