--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 	.frase {
 		text-decoration: underline; /* Sottolineatura */
 		font-size: 1.5em; /* Opzionale, per ingrandire il testo */
+		text-underline-offset: 5px; /* distanza tra la linea e la parola */
 	}
 
     /* Sezione di inserimento */
