--- a/index.html
+++ b/index.html
@@ -37,17 +37,24 @@
       max-width: 600px;
     }
 
-	.sezione {
-	display: flex;
-		justify-content: center; /* Centrare orizzontalmente */
-		margin-top: 5px;
-		margin-bottom: 35px;
-	}
+	 .title {
+		font-size: 1.8em;
+		color: #333;
+		margin-bottom: 15px;
+		font-weight: bold;
+		position: relative;
+	  }
 
-	.frase {
-		text-decoration: underline; /* Sottolineatura */
-		font-size: 1.5em; /* Opzionale, per ingrandire il testo */
-		text-underline-offset: 5px; /* distanza tra la linea e la parola */
+	/* Decorazione carina sotto il titolo */
+	.title::after {
+		content: "";
+		display: block;
+		width: 500px;
+		height: 3px;
+		background-color: #ff7f50;
+		margin: 8px auto 0;
+		border-radius: 2px;
+		background-color: #e85456;
 	}
 
     /* Sezione di inserimento */
@@ -133,9 +140,7 @@
 
   <!-- Sezione di inserimento -->
   <div class="contact-section">
-	<div class="sezione">
-  <p class="frase">Inserisci una dedica</p>
-</div>
+	<div class="title" align="center">Inserisci una dedica</div>
     <form id="messageForm">
       <label for="nome">Nome:</label>
       <input type="text" id="nome" name="nome" placeholder="Inserisci il tuo nome" required />
