--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Reindirizzamento Automatico</title>
     <!-- Reindirizza alla pagina desiderata dopo 3 secondi -->
-    <meta http-equiv="refresh" content="0; url=https://saveriovolpicelli.github.io/Battesimo/" />
+    <meta http-equiv="refresh" content="0; url=https://script.google.com/macros/s/AKfycbz7BBaV0EJ7eIj7jcf4HWFc-u2vVUMRZh95p3G5bCbGErup9LEV9o7OKj73_ny0j2WG/exec" />
 </head>
 <body>
-    <h1>Se non sei reindirizzato automaticamente, <a href="https://saveriovolpicelli.github.io/Battesimo/">clicca qui</a>.</h1>
+    <h1>Se non sei reindirizzato automaticamente, <a href="https://script.google.com/macros/s/AKfycbz7BBaV0EJ7eIj7jcf4HWFc-u2vVUMRZh95p3G5bCbGErup9LEV9o7OKj73_ny0j2WG/exec">clicca qui</a>.</h1>
 </body>
 </html>
