--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
     <meta charset="UTF-8">
-    <title>Reindirizzamento Automatico</title>
+    <title>Il Battesimo di Ilenia</title>
     <!-- Reindirizza alla pagina desiderata dopo 3 secondi -->
     <meta http-equiv="refresh" content="0; url=https://script.google.com/macros/s/AKfycbz7BBaV0EJ7eIj7jcf4HWFc-u2vVUMRZh95p3G5bCbGErup9LEV9o7OKj73_ny0j2WG/exec" />
 </head>
