--- a/index.html
+++ b/index.html
@@ -3,6 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <title>Il Battesimo di Ilenia</title>
+
+	<style>
+		/* Stile generale */
+		body {
+		  font-family: 'Arial', sans-serif;
+		  background: linear-gradient(135deg, #f8b500, #f95f62);
+		  min-height: 100vh;
+		  display: flex;
+		  flex-direction: column;
+		  align-items: center;
+		  padding: 20px;
+		  
+		  /* Per occupare tutto lo schermo e permettere lo scroll se necessario */
+		  height: 100vh;
+		  overflow-y: auto;
+		}
+
+		/* Titolo decorato */
+		h1 {
+		  color: #fff;
+		  font-size: 2.9em; /* Dimensione più grande */
+		  text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+		  margin-bottom: 50px;
+		  text-align: center;
+		  padding: 20px;
+		  background: rgba(255, 255, 255, 0.2);
+		  border-radius: 15px;
+		  width: 100%;
+		  max-width: 600px;
+		}
+	</style>
+
     <!-- Reindirizza alla pagina desiderata dopo 3 secondi -->
     <meta http-equiv="refresh" content="0; url=https://script.google.com/macros/s/AKfycbz7BBaV0EJ7eIj7jcf4HWFc-u2vVUMRZh95p3G5bCbGErup9LEV9o7OKj73_ny0j2WG/exec" />
 </head>
